SQLite ODBC Driver
------------------

Sat Feb 22 2003 version 0.49 released

	* update to SQLite 2.8.0
	* bug fix in fixupsql() concerning quotes thanks to Alex Clement
	* bug fix in substparam() for SQL_NTS/SQL_NULL_DATA
	  thanks to Alex Clement
	* bug fix in drvfetchscroll for wrong column counting
	  for SQL_FETCH_ABSOLUTE, thanks to Gene Shkolnik

Thu Jan 02 2003 version 0.48 released

	* cleanup threading
	* added mkopc tool for making opcodes.[ch] on Win32

Sat Sep 14 2002 version 0.47 released

	* fixed NULL pointer derefs in getmd() and mapsqltype()
	* SQLBindCol() now always binds even if no result available

Sat Aug 31 2002 version 0.46 released

	* experimental: configuration option: use coroutine
	  instead of thread for running select statements
	* SQLMoreResults() now always returns SQL_NO_DATA
	* use the new PRAGMA show_datatypes if available
	* reworked busy handling logic to use sqlite_busy_handler()
	* now perform sqlite_open() in single function dbopen()
	* changed all pthread_cond_signal() to pthread_cond_broadcast()

Fri Jul 05 2002 version 0.45 released

	* improved timestamp scanning
	* return result set with _ROWID_ for SQLSpecialColumns()
	  when no unique column in table
	* fixes in parameter substitution (SQLSetParam())
	* fixed reading data in pieces (SQLGetData())
	* added dummy implementations for SQLTablePrivileges(),
	  SQLColumnPrivileges(), SQLProcedures(), SQLForeignKeys(),
	  SQLProcedureColumns()
	* code cleanup
	* added support for NULL in parameters using %Q
	  sqlite_..printf() format specifier for SQLite > 2.4.x

Sun Jun 16 2002 version 0.44 released

	* fixed getbool() to return false on empty string
	* added implementation of SQLParamData(), SQLPutData()
	* fixed values of NON_UNIQUE field in SQLStatistics(),
	  store empty INDEX_QUALIFIER field in SQLStatistics()
	* fixes in getrowdata() concerning partial retrieving
	  of result set
	* when starting an asynchronous query, set number of
	  result rows to -1