@@ -15,7 +15,8 @@ WIN32 binaries (the ODBC driver DLL, install/uninstall programs) are in
     http://www.ch-werner.de/sqliteodbc/sqliteodbc-win32.zip
 
 The binaries were made with SQLite 2.8.0, MS VC++ 6.0 and tested on
-Windows NT 4.0 with the query tool of MS Excel 97 and MS Access 97.
+Windows NT 4.0 with the query tool of MS Excel 97, MS Access 97, with
+StarOffice 5.2 and OpenOffice 1.0.
 Unzip the archive into a temporary directory and execute the INST.EXE
 program. This installs the SQLite ODBC driver and creates a System DSN.
 To remove the driver use the UNINST.EXE program. To create a SQLite
@@ -185,7 +186,7 @@ TODO:
 - ??? SQLForeignKeys() ???
 
 
-February, 22nd, 2003
+March, 8th, 2003
 Christian Werner
 mailto:chw@ch-werner.de
 
